# escola-api

./: .gitignore  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: main.py
src/escola_api/: main.py  processar-cliente.html
src/escola_api/api/v1/: aluno_controller.py  curso_controller.py  formacao_controller.py  matricula_controller.py
src/escola_api/database/: banco_dados.py  modelos.py
src/escola_api/schemas/: aluno_schemas.py  curso_schemas.py  formacao_schemas.py  matricula_schemas.py
