[project]
name = "escola-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcio Ramos",email = "marcio.gleyson2026@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "escola_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
